--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,16 @@ jobs:
   ci:
     runs-on: ubuntu-latest
 
+    env:
+      APP_URL: ${{ secrets.APP_URL }}
+      NODE_ENV: TEST-E2E
+      PORT: ${{ secrets.PORT }}
+      PG_HOST: ${{ secrets.PG_HOST }}
+      PG_PORT: ${{ secrets.PG_PORT }}
+      PG_NAME: ${{ secrets.PG_NAME }}
+      PG_USER: ${{ secrets.PG_USER }}
+      PG_PASS: ${{ secrets.PG_PASS }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,6 +37,12 @@ jobs:
 
       - name: Run Docker compose
         run: npm run docker:compose --if-present
+
+      - name: Wait for PostgreSQL
+        run: |
+          echo "Waiting for PostgreSQL to be ready..."
+          timeout 60 bash -c 'until docker exec $(docker ps -qf "name=postgres") pg_isready -U postgres; do sleep 1; done'
+          echo "PostgreSQL is ready!"
 
       - name: Run Migrations
         run: npm run migration:run --if-present
