refactor: replace hardcoded credentials with environment variables in docker compose files

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "release:minor": "standard-version --release-as minor",
     "release:major": "standard-version --release-as major",
     "release:patch": "standard-version --release-as patch",
-    "docker:compose:prod": "docker compose --project-name the-shortener-prod -f .docker/docker-compose.prod.yml up -d",
-    "docker:compose:test": "docker compose --project-name the-shortener-test -f .docker/docker-compose.test.yml up -d",
+    "docker:compose:prod": "docker compose --env-file .env --project-name the-shortener-prod -f .docker/docker-compose.prod.yml up -d",
+    "docker:compose:test": "docker compose --env-file .env.test.local --project-name the-shortener-test -f .docker/docker-compose.test.yml up -d",
     "docker:compose": "npm run docker:compose:prod && npm run docker:compose:test",
     "migration:run": "tsx scripts/migrate.ts",
     "migration:rollback": "tsx scripts/migrate.ts rollback"
