feat: add nodemailer support and remove test environment configuration

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "setup": "tsx scripts/setup.ts",
+    "setup": "node scripts/setup.js",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "npm run build && npm run start:both",
@@ -20,9 +20,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test": "npm run test:unit && npm run test:e2e",
-    "test:unit": "cross-env NODE_ENV=TEST-UNIT jest --config test/jest.unit.ts",
-    "test:e2e": "cross-env NODE_ENV=TEST-E2E jest --config test/jest.e2e.ts",
+    "test": "npm run test:unit",
+    "test:unit": "jest --config test/jest.unit.ts",
     "prepare": "husky",
     "commit": "cz",
     "release": "standard-version",
@@ -30,8 +29,7 @@
     "release:major": "standard-version --release-as major",
     "release:patch": "standard-version --release-as patch",
     "docker:compose:prod": "docker compose --env-file .env --project-name the-shortener-prod -f .docker/docker-compose.prod.yml up -d",
-    "docker:compose:test": "docker compose --env-file .env.test.local --project-name the-shortener-test -f .docker/docker-compose.test.yml up -d",
-    "docker:compose": "npm run docker:compose:prod && npm run docker:compose:test",
+    "docker:compose": "npm run docker:compose:prod",
     "migration:run": "tsx scripts/migrate.ts",
     "migration:rollback": "tsx scripts/migrate.ts rollback",
     "seed": "tsx src/shared/infra/database/pg/seed.ts"
@@ -50,6 +48,7 @@
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -65,6 +64,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.19.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.2",
     "commitizen": "^4.3.1",
