--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,11 @@ REDIS_HOST=
 # Redis port (usually 6379)
 REDIS_PORT=
 
-# Full Redis connection URL (e.g., redis://user:pass@host:port)
-REDIS_URL=
+# Redis username (if the Redis instance requires authentication)
+REDIS_USERNAME=
+
+# Redis password (if the Redis instance requires authentication)
+REDIS_PASS=
 
 # Port the application will run on
 PORT=
@@ -31,23 +34,23 @@ NODE_ENV=
 # Public application URL (e.g., https://myapp.com)
 APP_URL=
 
-# Secret used for data encryption
+# Secret key used for encoding/encryption
 ENCODE_SECRET=
 
-# Default template language
-TEMPLATE_LANGUAGE=pt-BR
+# Default template language (e.g., en, pt-BR)
+TEMPLATE_LANGUAGE=
 
-# Name of the root/admin user
+# Root/admin username
 ROOT_USER_NAME=
 
-# Password of the root/admin user
+# Root/admin password
 ROOT_USER_PASS=
 
-# Email of the root/admin user
+# Root/admin email address
 ROOT_USER_EMAIL=
 
-# Email used for SMTP sending
+# SMTP email used to send messages
 SMTP_EMAIL=
 
-# Password for the SMTP account
+# SMTP account password
 SMTP_PASS=
